# server

./: .firebaserc  .gitignore  Cargo.toml  render.yaml  start.sh
functions/: .eslintrc.js  .gitignore  package-lock.json  package.json
functions/src/: index.ts  records.ts
migration/: Cargo.toml
migrations/: 20250507233506_create_icons_table.sql  20250510225926_make_published_nonnull.sql  20250511000654_make_search_categories_nonnull.sql  20250511000944_make_tags_nonnull.sql  20250515043623_create_svgs_table.sql  20250515082259_make_search_categories_nonnull.sql
public/: index.html  intro.md
src/: app.rs  db.rs  icons.rs  lib.rs  main.rs  svgs.rs  table.rs
src/entities/: icons.rs  mod.rs  prelude.rs  svgs.rs
