[package]
name = "phosphor-server"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4"
actix-rt = "2"
dotenvy = "0.15"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1"
serde_qs = { version = "0.15", features= ["actix4"] }
svg = "0.18"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
utoipa = { version = "5", features = ["actix_extras", "macros", "uuid"] }
utoipa-scalar = { version = "0.3", features = ["actix-web"] }
utoipa-actix-web = "0.1"

[dev-dependencies]
sea-orm-cli = "0.12"
